--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "senior-project",
+  "name": "partials",
   "version": "1.0.0",
-  "description": "",
-  "main": "initdb.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/redgam8/McSeniorProj.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/redgam8/McSeniorProj/issues"
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-mustache": "^1.0.4",
+    "express-session": "^1.17.0",
+    "mustache-express": "^1.3.0",
+    "nodemon": "^2.0.2",
+    "sqlite3": "^4.1.1"
   },
-  "homepage": "https://github.com/redgam8/McSeniorProj#readme"
+  "devDependencies": {},
+  "description": ""
 }
